<resources>
    <string name="app_name">Learn English</string>

    <string name="word">Word</string>
    <string name="meaning">Meaning</string>
    <string name="enter_word_hint">Type word here</string>
    <string name="enter_meaning_hint">Enter meaning</string>
    <string name="add">Add</string>
    <string name="show_meaning">Show meaning</string>
    <string name="home">Home</string>
    <string name="list">List</string>
    <string name="test">Test</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="learn">Learn</string>
    <string name="enter_meaning">Enter meaning</string>
    <string name="check">Check</string>
    <string name="wrong_answer">Wrong answer</string>
    <string name="delete">Delete</string>
    <string name="no_vocabulary">There are no vocabulary</string>
    <string name="no_date">There are no date</string>
    <string name="add_vocabulary">Add vocabulary</string>
    <string name="add_date">Add date</string>
</resources>